# sellerlane

./: .gitignore  Pipfile  docker-compose.yml  docker.env  pyproject.toml  requirements.txt
accounts/: tests.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
pages/: tests.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_quote.py  0003_photos.py  0004_alter_product_notes.py
templates/: _base.html  home.html
templates/account/: login.html  signup.html
templates/products/: product_create.html  product_detail.html  product_form.html  product_list.html
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
