[tool.poetry]
name = "sellerlane"
version = "0.1.0"
description = ""
authors = ["Faadhil Hakim <faadhil@nexttrack.biz>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^4.0.1"
django-allauth = "^0.47.0"
django-tailwind = "^3.1.0"
whitenoise = {extras = ["brotli"], version = "^5.3.0"}
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
environs = {extras = ["django"], version = "^9.4.0"}
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
